# College_course_resoure

./: .gitignore  LICENSE  README.md  Sharing.md
C_course_code/: CMakeLists.txt  CallTheString.c  CallTheString_v2.c  Out1.c  Out2.c  eroll.c  gaoduan.c  haw.sh  shfiwe.c  sy6_10.c  sy6_11.c  sy6_12.c  sy6_13.c  sy6_14.c  sy6_15.c  sy6_16.c  sy6_17.c  sy6_18.c  sy6_19.c  sy7_10.c  sy7_11.c  sy7_12.c  sy7_7.c  sy8_10.c  sy8_7.c  sy8_8.c  sy8_9.c  sy9_3.c  sy9_4  sy9_4.c  sy9_5.c  tt.c  tt.s
C_course_code/TestModule/: AhoTestModule.c  AhoTestModule.h
Kit/: witt.py
MarkdownNote/: Math.md  ReView.md
Paper/: w.md
